# FleetFlow-TeamAtri

./: README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  dashboard.py  maintenance.py  trips.py  vehicles.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py
backend/app/models/: maintenance.py  trip.py  user.py  vehicle.py
backend/app/schemas/: maintenance.py  trip.py  user.py  vehicle.py
backend/app/services/: auth.py  dashboard.py  maintenance.py  trip.py  vehicle.py
backend/app/utils/: dependencies.py
frontend/: README.md  index.html  package-lock.json  vite.config.js
frontend/src/: App.css  App.jsx  auth.css  driver.css  index.css
frontend/src/api/: auth.js  client.js  dashboard.js  maintenance.js  trips.js  vehicles.js
frontend/src/components/: DriverLayout.jsx  Header.jsx  Layout.jsx  Modal.jsx  Sidebar.jsx  Toast.jsx
frontend/src/context/: AuthContext.jsx  MaintenanceContext.jsx
frontend/src/data/: mockData.js
frontend/src/pages/: AccessDenied.jsx  AdminLogin.jsx  Dashboard.jsx  Drivers.jsx  Expenses.jsx  Login.jsx  Maintenance.jsx  Reports.jsx  Trips.jsx  Vehicles.jsx
frontend/src/pages/driver/: ActiveTrip.jsx  DriverDashboard.jsx  DriverMaintenance.jsx  DriverProfile.jsx  RideInvitations.jsx
ui/: base.md
